merge: merge and fix build error